--- a/DecisionMakingTeam/Unity_Reinforce_Learning/readme
+++ b/DecisionMakingTeam/Unity_Reinforce_Learning/readme
@@ -1,2 +1,8 @@
 만약 지금 강화학습 결과를 보고 싶다면 BananaCollectors.zip 파일 내부 파일로 
 원래 \ml-agents\UnitySDK\Assets\ML-Agents\Examples의 BananaCollectors의 내용을 대체 하면 됨.
+
+
+
+
+학습하는 모습을 보고 싶으면
+http://165.132.138.176:6006 tensorboard 에서 확인 가능. 다만 언제든지 끌 수도 있음.
