--- a/DecisionMakingTeam/Unity_Reinforce_Learning/readme
+++ b/DecisionMakingTeam/Unity_Reinforce_Learning/readme
@@ -1,7 +1,5 @@
-만약 지금 강화학습 결과를 보고 싶다면 BananaCollectors.zip 파일 내부 파일로 
-원래 \ml-agents\UnitySDK\Assets\ML-Agents\Examples의 BananaCollectors의 내용을 대체 하면 됨.
-
-
+만약 지금 강화학습 결과를 보고 싶다면 Assets.zip 파일 내부 파일을
+\ml-agents\UnitySDK\Assets 에 덮어쓰기 하면 됨.
 
 
 학습하는 모습을 보고 싶으면
