--- a/meeting/190129.md
+++ b/meeting/190129.md
@@ -15,9 +15,11 @@ ROS 공부 및 머신러닝 관련 학습 중.
 3. 김태한  
 비젼 쪽은 동환이 쪽에서 진행중이다.  
 승욱이와 함께 로보마스터 보드를 써보니 기본적인 환경 세팅 하는 것도 만만치가 않더라. 
-CAD로 하드웨어 만들면서 형철이, 승욱이와 함께 하드웨어 제어 쪽을 좀 더 공부해 보겠다.
+CAD로 하드웨어 만들면서 형철이, 승욱이와 함께 하드웨어 제어 쪽을 좀 더 공부해 보겠다.  
+현재 한 자리 비는 상황인데 빅데이터 동아리에서 활동하며 강화학습 계속 공부하시던 분이  
 
-4 곽동환  
+
+4. 곽동환  
 이전에 로봇 인식하던 코드를 파이썬에서 c++로 변환하는 작업을 하는 중이다. 
 하는 김에 리눅스 환경에서 최적화 하는 작업을 진행 중이다.  
 Depth 카메라에서 나오는 값이 불안정하여 안정화하는 작업,  
