fixed lockon module

--- a/Ros/icra_roboin/icra_roboin_decision/scripts/HowToUse.ipynb
+++ b/Ros/icra_roboin/icra_roboin_decision/scripts/HowToUse.ipynb
@@ -124,13 +124,14 @@
     }
    ],
    "source": [
-    "##move behavior로 맵의 (6,2) 좌표로 이동해서 관측값을 받는다.\n",
-    "##받은 관측값 dictionary에서 position을 표시한다\n",
-    "\n",
-    "behav_=4\n",
+    "behav_=1\n",
     "SetBehaviorClient(behav_,\"robot_0/\")\n",
-    "goal_ = np.array([1,2,3,0,0,0,0])\n",
-    "SetGoalClient(goal_,\"robot_0/\")"
+    "goal_ = np.array([5,3,0,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_0/\")\n",
+    "behav_=1\n",
+    "SetBehaviorClient(behav_,\"robot_1/\")\n",
+    "goal_ = np.array([5,3,0,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_1/\")"
    ]
   },
   {
@@ -140,6 +141,44 @@
    "outputs": [],
    "source": [
     "behav_=1\n",
+    "SetBehaviorClient(behav_,\"robot_0/\")\n",
+    "goal_ = np.array([3,3,3,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_0/\")\n",
+    "behav_=1\n",
+    "SetBehaviorClient(behav_,\"robot_1/\")\n",
+    "goal_ = np.array([3,3,-1,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_1/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##move behavior로 맵의 (6,2) 좌표로 이동해서 관측값을 받는다.\n",
+    "##받은 관측값 dictionary에서 position을 표시한다\n",
+    "\n",
+    "behav_=1\n",
+    "SetBehaviorClient(behav_,\"robot_0/\")\n",
+    "goal_ = np.array([3,3,3,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_0/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "behav_=4\n",
     "SetBehaviorClient(behav_,\"robot_1/\")\n",
     "goal_ = np.array([5,3,-1,0,0,0,0])\n",
     "SetGoalClient(goal_,\"robot_1/\")"
@@ -156,19 +195,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ammo': 50,\n",
+       " 'buff_left': {'nsecs': 0, 'secs': 0},\n",
+       " 'buff_zone_cooltime': {'nsecs': 300000000, 'secs': 12},\n",
+       " 'current_behavior_process': 2,\n",
+       " 'current_behavior_style': 1,\n",
+       " 'enemy_pose1': {'header': {'frame_id': '/robot_0/map',\n",
+       "   'seq': 0,\n",
+       "   'stamp': {'nsecs': 700000000, 'secs': 47}},\n",
+       "  'pose': {'orientation': {'w': -0.15200573172927903,\n",
+       "    'x': 0.0,\n",
+       "    'y': 0.0,\n",
+       "    'z': 0.9883796120527004},\n",
+       "   'position': {'x': 2.6769907493235148,\n",
+       "    'y': 2.3444209320170075,\n",
+       "    'z': -0.3930090426816588}}},\n",
+       " 'enemy_pose2': {'header': {'frame_id': '',\n",
+       "   'seq': 0,\n",
+       "   'stamp': {'nsecs': 0, 'secs': 0}},\n",
+       "  'pose': {'orientation': {'w': 0.0, 'x': 0.0, 'y': 0.0, 'z': 0.0},\n",
+       "   'position': {'x': 0.0, 'y': 0.0, 'z': 0.0}}},\n",
+       " 'enemy_priority': 3,\n",
+       " 'game_start_time': {'nsecs': 0, 'secs': 0},\n",
+       " 'game_state': 1,\n",
+       " 'goal': {'etc': 0.0,\n",
+       "  'header': {'frame_id': 'robot_0/map',\n",
+       "   'seq': 0,\n",
+       "   'stamp': {'nsecs': 900000000, 'secs': 19}},\n",
+       "  'x': 5.0,\n",
+       "  'xa': 0.0,\n",
+       "  'y': 3.0,\n",
+       "  'ya': 0.0,\n",
+       "  'yaw': 0.0,\n",
+       "  'yawa': 0.0},\n",
+       " 'has_buff': False,\n",
+       " 'how_many_enemies_detected': 1,\n",
+       " 'is_enemy_1_detected': True,\n",
+       " 'is_enemy_2_detected': False,\n",
+       " 'is_hit': False,\n",
+       " 'last_hit_time': {'nsecs': 0, 'secs': 0},\n",
+       " 'locked_on_enemy': 1,\n",
+       " 'my_health': 1000,\n",
+       " 'my_pose': {'header': {'frame_id': '/robot_0/map',\n",
+       "   'seq': 0,\n",
+       "   'stamp': {'nsecs': 700000000, 'secs': 47}},\n",
+       "  'pose': {'orientation': {'w': -0.17782639981492923,\n",
+       "    'x': 0.0,\n",
+       "    'y': 0.0,\n",
+       "    'z': 0.9840618738315497},\n",
+       "   'position': {'x': 5.188152636680464, 'y': 3.135529997228554, 'z': 0.0}}},\n",
+       " 'reload_zone_cooltime': {'nsecs': 0, 'secs': 0},\n",
+       " 'stamp': {'nsecs': 700000000, 'secs': 47},\n",
+       " 'time_passed_from_start': {'nsecs': 700000000, 'secs': 47},\n",
+       " 'which_armor_hit': 0}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "GetInfoClient(\"robot_0/\")"
+    "GetInfoClient(\"robot_1/\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
