--- a/Ros/icra_roboin/icra_roboin_decision/scripts/HowToUse.ipynb
+++ b/Ros/icra_roboin/icra_roboin_decision/scripts/HowToUse.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,26 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "robot_0 health: 1000\n",
-      "robot_1 health: 1000\n",
-      "robot_0 ammo: 50\n",
-      "robot_1 ammo: 50\n",
-      "robot_0 game_state: 2\n",
-      "robot_1 game_state: 2\n",
-      "robot_0 behavior: 0\n",
-      "robot_1 behavior: 0\n",
-      "robot_0 process: 0\n",
-      "robot_1 process: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "info_0 = GetInfoClient(\"robot_0\",1)\n",
     "info_1 = GetInfoClient(\"robot_1\",1)\n",
@@ -145,30 +128,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "success: True\n",
-       "info: 0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "##scenario\n",
+    "\n",
+    "import time\n",
+    "\n",
     "behav_=1\n",
     "SetBehaviorClient(behav_,\"robot_0\")\n",
     "goal_ = np.array([5,3,0,0,0,0,0])\n",
     "SetGoalClient(goal_,\"robot_0\")\n",
     "behav_=1\n",
     "SetBehaviorClient(behav_,\"robot_1\")\n",
-    "goal_ = np.array([3.3,2,0,0,0,0,0])\n",
-    "SetGoalClient(goal_,\"robot_1\")"
+    "goal_ = np.array([3,2,0,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_1\")\n",
+    "\n",
+    "time.sleep(9)\n",
+    "\n",
+    "behav_=1\n",
+    "SetBehaviorClient(behav_,\"robot_1\")\n",
+    "goal_ = np.array([5,3,0,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_1\")\n",
+    "behav_=4\n",
+    "SetBehaviorClient(behav_,\"robot_0\")\n",
+    "goal_ = np.array([5,3,1,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_0\")\n",
+    "\n",
+    "time.sleep(9)\n",
+    "\n",
+    "behav_=1\n",
+    "SetBehaviorClient(behav_,\"robot_0\")\n",
+    "goal_ = np.array([5,3,0,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_0\")\n",
+    "\n",
+    "time.sleep(0.8)\n",
+    "\n",
+    "behav_=1\n",
+    "SetBehaviorClient(behav_,\"robot_1\")\n",
+    "goal_ = np.array([3,3,0,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_1\")\n",
+    "\n",
+    "time.sleep(3)\n",
+    "\n",
+    "behav_=5\n",
+    "SetBehaviorClient(behav_,\"robot_1\")\n",
+    "goal_ = np.array([4,4.5,-1.5707,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_1\")\n",
+    "\n",
+    "time.sleep(1)\n",
+    "\n",
+    "behav_=5\n",
+    "SetBehaviorClient(behav_,\"robot_0\")\n",
+    "goal_ = np.array([4,4.5,-1.5707,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "behav_=4\n",
+    "SetBehaviorClient(behav_,\"robot_0\")\n",
+    "goal_ = np.array([2,1,-3,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "behav_=4\n",
+    "SetBehaviorClient(behav_,\"robot_1\")\n",
+    "goal_ = np.array([5,3,1,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_1\")\n",
+    "behav_=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "behav_=1\n",
+    "SetBehaviorClient(behav_,\"robot_0\")\n",
+    "goal_ = np.array([5,3,0,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_0\")\n",
+    "behav_=1"
    ]
   },
   {
@@ -217,14 +269,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "behav_=5\n",
+    "SetBehaviorClient(behav_,\"robot_1\")\n",
+    "goal_ = np.array([4,4.5,-1.5707,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_1\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "behav_=1\n",
+    "SetBehaviorClient(behav_,\"robot_1\")\n",
+    "goal_ = np.array([1,1,-1.5707,0,0,0,0])\n",
+    "SetGoalClient(goal_,\"robot_1\")"
+   ]
   },
   {
    "cell_type": "code",
