--- a/Decision/load_model.ipynb
+++ b/Decision/load_model.ipynb
@@ -431,7 +431,7 @@
     "            before_state1 = copy.deepcopy(state1)\n",
     "            state0 = copy.deepcopy(next_state0)\n",
     "            state1 = copy.deepcopy(next_state1)\n",
-    "            if (len(agent.memory) >= agent.train_start) and (load_model==False):\n",
+    "            if (len(agent.memory) >= agent.train_start) and (save_model):\n",
     "                agent.train_model()\n",
     "\n",
     "            if done:\n",
