--- a/icra_roboin_navigation/maps/map_maker.ipynb
+++ b/icra_roboin_navigation/maps/map_maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,28 +32,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "def setblack(data,lists):\n",
-    "    for i in range(lists[1]+9,lists[3]+10): ### Y\n",
-    "        for j in range(lists[0]+9,lists[2]+10): ### X\n",
+    "    for i in range(lists[1]-1,lists[3]): ### Y\n",
+    "        for j in range(lists[0]-1,lists[2]): ### X\n",
     "            data[i,j] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "listss = [(34,20,54,25),(90,0,95,20),(127,28,132,48),(70,47,90,53),(28,52,33,72),(65,80,70,100),(106,75,126,80)]"
+    "#180,120\n",
+    "listss = [(34,30,54,35),(126,85,146,90),\\\n",
+    "          (38,62,43,82),(137,38,142,58),\\\n",
+    "          (75,90,80,110),(100,10,105,30),\\\n",
+    "          (80,58,100,62)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
